--- a/style.css
+++ b/style.css
@@ -14,16 +14,6 @@ i {
   padding: 10px;
 }
 
-iframe {
-  border: 2px solid orange;
-}
-
-#membership {
-  height: 800px;
-  width: 1400px;
-  padding-bottom: 50px;
-}
-
 h2 {
   color: orange;
 }
@@ -67,7 +57,20 @@ span {
 
 #timetable {
   height: 800px;
-  width: 1200px;
+  width: 400px;
+  padding-bottom: 50px;
+}
+
+#membership-group {
+  height: fit-content;
+  width: auto;
+  padding-left: 70px;
+}
+
+#membership {
+  flex-wrap: wrap;
+  height: 800px;
+  width: 500px;
   padding-bottom: 50px;
 }
 
@@ -102,10 +105,18 @@ hr {
   height: 400px;
   width: 400px;
   border-radius: 20px;
+  display: inline-block;
+
 }
 
 #card {
   border-radius: 20px;
+}
+
+.footer {
+  bottom: 0;
+  padding: 0;
+  margin: 0;
 }
 
 
