--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ span {
 #timetable {
   height: 800px;
   width: 400px;
+  margin-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -107,7 +108,11 @@ hr {
   width: 400px;
   border-radius: 20px;
   display: inline-block;
+}
 
+.about-logo {
+  margin-top: 50px;
+  margin-bottom: 0;
 }
 
 #card {
@@ -182,4 +187,63 @@ hr {
   }
 }
 
+.qtitle {
+  text-align: center;
+}
 
+#gymimg {
+  height: 450px;
+}
+
+#pricingtitle {
+  top: 100px;
+  padding-top: 20px;
+}
+
+form { 
+  max-width:420px; 
+  height: fit-content;
+  top: 100px;
+  padding: 0 10px;
+}
+
+.feedback-input {
+  color:white;
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid orange;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+width: 100%;
+  box-sizing: border-box;
+  outline:0;
+}
+
+.feedback-input:focus { border:2px solid #fff; }
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
+}
+/* 
+[type="submit"] {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  background:#CC6666;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+}
+[type="submit"]:hover { background:#CC4949; } */
