--- a/style.css
+++ b/style.css
@@ -83,10 +83,29 @@ align-items: center;
   margin-top: 50px;
 }
 
+.accordion-item{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #000;
+  color: #fff;
+}
 
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
+.accordion-button{
+  background-color: orange;
+  color: #000;
+}
 
+.accordion-header{
+  color: #000;
+  background-color: orange;
+}
+
+#table {
+  margin-top: 50px;
+  text-align: center;
+  color: orange;
+  border: orange;
+}
 
 img {
   border-radius: 20px;
