download page finished index finished await feedback

--- a/style.css
+++ b/style.css
@@ -221,6 +221,23 @@ hr {
   color: orange;
 }
 
+#goodtimes img{
+  height: 600px;
+}
+
+#facilities-list {
+  list-style-type: none;
+}
+
+#dlimg {
+  height: 30%;
+  margin-bottom: 60px;
+}
+
+#jointhefamily {
+  margin-top: 30px;
+}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -292,20 +309,4 @@ textarea {
   line-height: 150%;
   resize:vertical;
 }
-/* 
-[type="submit"] {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  width: 100%;
-  background:#CC6666;
-  border-radius:5px;
-  border:0;
-  cursor:pointer;
-  color:white;
-  font-size:24px;
-  padding-top:10px;
-  padding-bottom:10px;
-  transition: all 0.3s;
-  margin-top:-4px;
-  font-weight:700;
-}
-[type="submit"]:hover { background:#CC4949; } */
+
