--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ img {
 
 .rounded-circle {
   border: 2px solid orange;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 hr {
@@ -238,6 +238,9 @@ hr {
   margin-top: 30px;
 }
 
+#fclist{
+  font-size: 28px;
+}
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
